# cypress

./: .gitignore  README.md
.github/workflows/: build-and-release.yml  dll-linux.yml  dll.yml  launcher-linux.yml  launcher.yml  test.yml
Launcher/: CypressLauncher.csproj  app.manifest  build.ps1
Launcher/CypressLauncher/: EaLoginWindow.cs  MessageHandler.Auth.cs  MessageHandler.Core.cs  MessageHandler.Data.cs  MessageHandler.Identity.cs  MessageHandler.Init.cs  MessageHandler.Launch.cs  MessageHandler.Update.cs  Program.cs  ResourceBuilder.cs
Launcher/Docs/: HostingReadMe.txt  JoiningReadMe.txt  README.txt
Launcher/Properties/: AssemblyInfo.cs
Launcher/wwwroot/: index.html
Launcher/wwwroot/css/: auth.css  bfn.css  browser.css  forms.css  instances.css  motd.css  profile.css
Launcher/wwwroot/js/: actions.js  auth.js  browser.js  core.js  data.js  docs.js  init.js  instances.js  levelmode.js  moderator.js  modifiers.js  pickers.js  playlist.js  relay.js  serverinfo.js  settings.js  tabs.js  updates.js
Server/: CMakeLists.txt  GW2ServerProject.vcxproj  README.md
Server/Examples/: Start_Dedicated.bat  Start_Join.bat
Server/Source/Anticheat/: LoadoutValidator.cpp  ServerEventSyncListener.h
Server/Source/Core/: Client.cpp  Client.h  Config.h  Logging.cpp  Logging.h  Program.cpp  Server.cpp  VersionInfo.h
Server/Source/GameHooks/: fbClientHooks.cpp  fbClientHooks.h  fbMainHooks.cpp  fbServerHooks.cpp
Server/Source/GameModules/: GW1Module.cpp
Server/include/: CypressIdentity.h  ServerBanlist.h  ServerPlaylist.h  SideChannel.cpp  SideChannel.h
Server/include/Kyber/: UDPSocket.cpp  UDPSocket.h
Server/include/fb/Engine/: ConsoleRegistry.h  Server.h  ServerConnection.h  ServerEventSyncEntity.h  ServerPeer.h  ServerPlayer.h
Server/include/fb/TypeInfo/: Asset.h  DataContainer.h  EventSyncEntityData.h  GamePlatform.h  LogicPrefabReferenceObjectData.h  SettingEntityData.h
tools/cypress-servers/internal/master/: auth.go  identity.go  master.go
tools/cypress-servers/internal/relay/: relay.go
